# WebcamStream

./: .gitignore  LICENSE  README.md
WebcamStream/: CMakeLists.txt
WebcamStream/Common/: CMakeLists.txt  Decoder.cpp  NetMessage.cpp  Webcam.cpp  Webcam2.cpp
WebcamStream/Common/includes/: Decoder.h  NetMessage.h  Webcam.h  Webcam2.h
WebcamStream/Server/: CMakeLists.txt
WebcamStream/Tests/: CMakeLists.txt  Capture.cpp  NetMessage.cpp  TestCameraFormats.cpp  mjpeg_decoder.cpp
